# swm

./: .clang-format  .travis.yml  CMakeLists.txt
source/: swm.c
swm/: CMakeLists.txt  swm.cpp
